<resources>
    <string name="app_name" translatable="false">WeatherApp</string>
    <string name="alarm">Alarm</string>
    <string name="home">Home</string>
    <string name="favourite">Favourite</string>
    <string name="setting">Setting</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="location">Location</string>
    <string name="gps">GPS</string>
    <string name="map">Map</string>
    <string name="language">Language</string>
    <string name="english">English</string>
    <string name="arabic">Arabic</string>
    <string name="notifications">Notifications</string>
    <string name="enable">Enable</string>
    <string name="disable">Disable</string>
    <string name="wind_speed">Wind Speed</string>
    <string name="meter_sec">Meter / Sec</string>
    <string name="mile_hour">Mile / Hour</string>
    <string name="temperature">Temperature</string>
    <string name="celsius">Celsius</string>
    <string name="kelvin">Kelvin</string>
    <string name="fahrenheit">Fahrenheit</string>
    <string name="feel_like">feel like</string>
    <string name="humidity">Humidity</string>
    <string name="uv_index">UV index</string>
    <string name="rain">Rain</string>
    <string name="wind">Wind</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="_10_days_forecast">10 days forecast</string>
    <string name="alert">Alert</string>
    <string name="notification">Notification</string>
    <string name="save">Save</string>
    <string name="get_current_location">Get Current Location</string>
    <string name="pick_from_map">Pick From Map</string>
    <string name="pressure">Pressure</string>
    <string name="_8_days_forecast">8 days forecast</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="are_you_sure">Are You Sure</string>
    <string name="you_want_to_delete_it">You Want To Delete It !</string>
    <string name="changing_the_language">! Changing the language</string>
    <string name="may_cause_app_restart">may cause app restart</string>
    <string name="no_internet_connection">! No Internet Connection</string>
</resources>