<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/homeFragment"
        android:enabled="true"
        android:title="@string/home"
        android:icon="@drawable/home"
        	 />
    <item
        android:id="@+id/favouriteFragment"
        android:enabled="true"
        android:icon="@drawable/favorite"
        android:title="@string/favourite"/>
    <item
        android:id="@+id/alarmFragment"
        android:enabled="true"
        android:icon="@drawable/alarm"
        android:title="@string/alarm"/>
    <item
        android:id="@+id/settingFragment"
        android:enabled="true"
        android:icon="@drawable/settings"
        android:title="@string/setting"/>

</menu>
